# Smart-Lock

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  Kconfig.projbuild  main.c
main/Com/: Com_utils.c  Com_utils.h
main/Dri/: Dri_i2c.c  Dri_i2c.h
main/Int/: Int_bluetooth.c  Int_bluetooth.h  Int_fpm383.c  Int_fpm383.h  Int_motor.c  Int_motor.h  Int_ota.c  Int_ota.h  Int_sc12b.c  Int_sc12b.h  Int_sntp.c  Int_sntp.h  Int_tempPassword.c  Int_tempPassword.h  Int_wifi.c  Int_wifi.h  Int_ws2812b.c  Int_ws2812b.h  Int_wtn6080e.c  Int_wtn6080e.h
